--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-simple-typewriter": "^5.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
