--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "next": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-simple-typewriter": "^5.0.1",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
