--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-simple-typewriter": "^5.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "sharp": "^0.33.5",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
